Updated readme and added basic functionality

--- a/Win7Lock/Win7Lock.csproj
+++ b/Win7Lock/Win7Lock.csproj
@@ -42,6 +42,14 @@
     <Compile Include="Winlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="NoAltTab.exe" />
+    <Content Include="NoWinKey.exe" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="LICENSE" />
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
